fix: Display content and add layout toggle

--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="AI-powered gaming news aggregator"
+      content="Gilga.co.uk - Your source for gaming news"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- Website Title Updated Here -->
     <title>Gilga.co.uk</title>
   </head>
   <body>
